<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="63dp"
        android:layout_height="21dp"
        android:text="@string/Nombre"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="95dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="49dp"
        android:layout_height="24dp"
        android:text="@string/Base"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        tools:layout_editor_absoluteX="231dp"
        tools:layout_editor_absoluteY="95dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="63dp"
        android:layout_height="23dp"
        android:text="@string/textview"
        tools:layout_editor_absoluteX="231dp"
        tools:layout_editor_absoluteY="154dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="377dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cerrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="535dp" />
</androidx.constraintlayout.widget.ConstraintLayout>